--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "page-foodmap -d dist"
+    
+  "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.1",
@@ -20,7 +21,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
     "gh-pages": "^6.3.0",
-    "vite": "^6.0.1",
+    "vite": "^6.1.0",
     "vite-plugin-vue-devtools": "^7.5.4",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
